Change of get meals response
